// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEventItem receive matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "width": "100%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "18px",
          "borderBottomRightRadius": "18px",
          "borderTopLeftRadius": "18px",
          "borderTopRightRadius": "18px",
          "height": "36px",
          "width": "36px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "borderBottomLeftRadius": "18px",
            "borderBottomRightRadius": "18px",
            "borderTopLeftRadius": "18px",
            "borderTopRightRadius": "18px",
            "flexBasis": "auto",
            "height": "36px",
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "width": "36px",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
        />
      </div>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
    >
      

    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(85,85,85,1.00)",
          "fontSize": "15px",
          "textTransform": "capitalize",
        }
      }
    >
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontSize": "10px",
            "fontWeight": "500",
          }
        }
      >
        From
        :
      </span>
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontWeight": "700",
          }
        }
      >
        Misao Matimbo
      </span>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(163,163,163,1.00)",
          "fontSize": "15px",
          "marginTop": "4px",
          "textTransform": "capitalize",
        }
      }
    >
      aaa
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-end",
        "WebkitBoxAlign": "end",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "end",
        "WebkitFlexDirection": "column",
        "WebkitJustifyContent": "flex-end",
        "alignItems": "flex-end",
        "borderBottomWidth": "0px",
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "msFlexAlign": "end",
        "msFlexDirection": "column",
        "msFlexPack": "end",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          0.04
        </div>
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          G$
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxPack": "center",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "20px",
            "borderBottomRightRadius": "20px",
            "borderTopLeftRadius": "20px",
            "borderTopRightRadius": "20px",
            "height": "36px",
            "justifyContent": "center",
            "marginBottom": "7px",
            "marginLeft": "7px",
            "marginRight": "0px",
            "marginTop": "7px",
            "msFlexAlign": "center",
            "msFlexPack": "center",
            "width": "36px",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "color": "rgba(85,85,85,1.00)",
              "fontFamily": "MaterialIcons",
              "fontSize": "16px",
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(75,75,75,0.80)",
            "fontSize": "8px",
            "marginLeft": "auto",
          }
        }
      >
        04/01/19 3:03 PM
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "width": "100%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "18px",
          "borderBottomRightRadius": "18px",
          "borderTopLeftRadius": "18px",
          "borderTopRightRadius": "18px",
          "height": "36px",
          "width": "36px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "borderBottomLeftRadius": "18px",
            "borderBottomRightRadius": "18px",
            "borderTopLeftRadius": "18px",
            "borderTopRightRadius": "18px",
            "flexBasis": "auto",
            "height": "36px",
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "width": "36px",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
        />
      </div>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
    >
      

    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(85,85,85,1.00)",
          "fontSize": "15px",
          "textTransform": "capitalize",
        }
      }
    >
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontSize": "10px",
            "fontWeight": "500",
          }
        }
      >
        To
        :
      </span>
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontWeight": "700",
          }
        }
      >
        Misao Matimbo
      </span>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(163,163,163,1.00)",
          "fontSize": "15px",
          "marginTop": "4px",
          "textTransform": "capitalize",
        }
      }
    >
      aaa
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-end",
        "WebkitBoxAlign": "end",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "end",
        "WebkitFlexDirection": "column",
        "WebkitJustifyContent": "flex-end",
        "alignItems": "flex-end",
        "borderBottomWidth": "0px",
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "msFlexAlign": "end",
        "msFlexDirection": "column",
        "msFlexPack": "end",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          0.04
        </div>
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          G$
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxPack": "center",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "20px",
            "borderBottomRightRadius": "20px",
            "borderTopLeftRadius": "20px",
            "borderTopRightRadius": "20px",
            "height": "36px",
            "justifyContent": "center",
            "marginBottom": "7px",
            "marginLeft": "7px",
            "marginRight": "0px",
            "marginTop": "7px",
            "msFlexAlign": "center",
            "msFlexPack": "center",
            "width": "36px",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "color": "rgba(85,85,85,1.00)",
              "fontFamily": "MaterialIcons",
              "fontSize": "16px",
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(75,75,75,0.80)",
            "fontSize": "8px",
            "marginLeft": "auto",
          }
        }
      >
        04/01/19 3:03 PM
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "width": "100%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "18px",
          "borderBottomRightRadius": "18px",
          "borderTopLeftRadius": "18px",
          "borderTopRightRadius": "18px",
          "height": "36px",
          "width": "36px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "borderBottomLeftRadius": "18px",
            "borderBottomRightRadius": "18px",
            "borderTopLeftRadius": "18px",
            "borderTopRightRadius": "18px",
            "flexBasis": "auto",
            "height": "36px",
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "width": "36px",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
        />
      </div>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
    >
      

    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(85,85,85,1.00)",
          "fontSize": "15px",
          "textTransform": "capitalize",
        }
      }
    >
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontSize": "10px",
            "fontWeight": "500",
          }
        }
      >
        From
        :
      </span>
      <span
        className="css-text-76zvg2 css-textHasAncestor-16my406"
        dir="auto"
        style={
          Object {
            "fontWeight": "700",
          }
        }
      >
        Misao Matimbo
      </span>
    </div>
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "color": "rgba(163,163,163,1.00)",
          "fontSize": "15px",
          "marginTop": "4px",
          "textTransform": "capitalize",
        }
      }
    >
      aaa
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-end",
        "WebkitBoxAlign": "end",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "end",
        "WebkitFlexDirection": "column",
        "WebkitJustifyContent": "flex-end",
        "alignItems": "flex-end",
        "borderBottomWidth": "0px",
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "msFlexAlign": "end",
        "msFlexDirection": "column",
        "msFlexPack": "end",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          0.04
        </div>
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "textAlign": "right",
            }
          }
        >
          G$
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxPack": "center",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "20px",
            "borderBottomRightRadius": "20px",
            "borderTopLeftRadius": "20px",
            "borderTopRightRadius": "20px",
            "height": "36px",
            "justifyContent": "center",
            "marginBottom": "7px",
            "marginLeft": "7px",
            "marginRight": "0px",
            "marginTop": "7px",
            "msFlexAlign": "center",
            "msFlexPack": "center",
            "width": "36px",
          }
        }
      >
        <div
          className="css-text-76zvg2"
          dir="auto"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "color": "rgba(85,85,85,1.00)",
              "fontFamily": "MaterialIcons",
              "fontSize": "16px",
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "end",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "flex-end",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "end",
        }
      }
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(75,75,75,0.80)",
            "fontSize": "8px",
            "marginLeft": "auto",
          }
        }
      >
        04/01/19 3:03 PM
      </div>
    </div>
  </div>
</div>
`;
